The numbers properly start from the right to left direction now. Fixed overflow bug. Now properly flows and can be scrolled.

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@ body {
   padding: 5px;
   justify-content: flex-end;
 
+
   background-color: black;
   width: 370px;
   height: 95px;
@@ -31,7 +32,16 @@ body {
 #display-input {
   margin-top: auto;
   margin-bottom: auto;
-  overflow: hidden;
+  overflow: scroll;
+  direction: rtl;
+
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* For Chrome */
+#display-input::-webkit-scrollbar {
+  display: none;
 }
 
 #buttons {
